fixed index alignment

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,8 +1,8 @@
 body {
   margin-top: 125px;
-  margin-right: 385px;
+  margin: auto;
 }
 
 h1 {
-  margin-left: 175px;
+  margin-left: 100px;
 }
